# ncnn_mobilenetv3

./: CMakeLists.txt  README.md  mobilenetv2.param  mobilenetv2_int8.param  mobilenetv3.cpp  pot.txt  synset_words.txt
classify/: mobilenet_onnx.py  mobilenetv3.py
